--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react_ujs": "^2.6.0",
+    "tone": "^13.8.25",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
