--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "anime": "^0.1.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-slider": "^1.0.0",
     "react_ujs": "^2.6.0",
     "tone": "^13.8.25",
     "turbolinks": "^5.2.0"
